[package]
name = "pg_ecdsa_verify"
version = "1.2.0"
authors = ["Joel Jakobsson <github@compiler.org>"]
edition = "2021"
description = "A PostgreSQL extension for ECDSA signature verification."
keywords = ["ECDSA", "PostgreSQL", "cryptography", "signature", "verification"]
license = "MIT"
repository = "https://github.com/joelonsql/pg_ecdsa_verify"
documentation = "https://docs.rs/pg_ecdsa_verify"
readme = "README.md"
categories = ["cryptography", "database"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg17"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = "=0.12.9"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10"
ecdsa_verify_lib = { version = "1.1", package = "ecdsa_verify" }

[dev-dependencies]
pgrx-tests = "=0.12.9"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "ecdsa_verify"

[[bin]]
name = "pgrx_embed_pg_ecdsa_verify"
path = "./src/bin/pgrx_embed.rs"
